Fix skills on mobile and add list items

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -38,3 +38,6 @@ $input-btn-border-width: 2px;
 $input-btn-padding-y-lg: .75rem;
 $input-btn-padding-x-lg: 1.25rem;
 $input-btn-font-size-lg: $font-size-base;
+
+$navbar-dark-color: rgba(#fff, .75);
+$navbar-dark-hover-color: #fff;
